workspace = { members = ["jvmti_macros"] }
[package]
name = "agent-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
jvmti_macros = {version = "0.1.0", path = "jvmti_macros" }


[build-dependencies]
bindgen = "0.69"
